--- a/Release/css/viewSections.css
+++ b/Release/css/viewSections.css
@@ -29,11 +29,17 @@
 	
 	#Main
 	{
-		position: relative;
-		left: var(--sidebar-width);
-		width: calc(100% - var(--sidebar-width));
+		position: absolute;
+		left: 0;
+		width: 100%;
 		height: 100vh;
 		transition: 1s;
+	}
+	
+	#Main.sidebar-open
+	{
+		left: var(--sidebar-width);
+		width: calc(100% - var(--sidebar-width));
 	}
 	
 	.viewMain.open ~ .viewFireteam, .viewFireteam.open ~ .viewMain, .viewFireteam.open ~ .viewMain, .viewMain.open ~ .viewFireteam
@@ -60,13 +66,19 @@
 	.main-content
 	{
 		display: grid;
-		width: calc(100% - var(--sidebar-width));
-		left: var(--sidebar-width);
+		width: 100%;
+		left: 0;
 		right: 0;
 		height: 100%;		
 		z-index: 0;
 		transition: 1s;
 		position: absolute;
+	}
+	
+	.main-content.sidebar-open
+	{
+		width: calc(100% - var(--sidebar-width));
+		left: var(--sidebar-width);
 	}
 	
 
@@ -76,13 +88,7 @@
 	{
 		display: none;
 		height: 0%;
-	}
-	
-	.viewFireteam
-	{
-		display: flex;
 		width: 100%;
-		height: 100%;
 		position: absolute;
 	}
 	
@@ -109,7 +115,7 @@
 		padding: 0 2px 2px 2px;
 		top: 0;
 		right: 0;
-		background-color: #000;
+		background: var(--grad1);
 		border-radius: 0 0 0 12px;
 		z-index: 99;
 	}
